--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,3 +19,12 @@ body {
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.nav_active {
+  background-color: rgba(0, 0, 0, 0.1);
+  /* margin: 0 15px; */
+  /* padding: 10px; */
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  border-left: 3px solid #2c2c2c;
+}
